syntax = "proto3";

package users;

import "types.proto";

option go_package = "grpc";

service V1Users {
    rpc Create(CreateUserRequest) returns(UserReply) {}
    rpc FindById(FindByIdRequest) returns(UserReply) {}
    rpc FindByEmail(FindByEmailRequest) returns(UserReply) {}
    rpc Update(UpdateUserRequest) returns(UserReply) {}
}

message CreateUserRequest {
    types.CreateUser newUser = 1;
    string JWT = 2;
}

message FindByIdRequest {
    int64 id = 1;
    string JWT = 2;
}

message FindByEmailRequest {
    string email = 1;
    string JWT = 2;
}

message UpdateUserRequest {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string newPassword = 4;
    string JWT = 5;
}

message UserReply {
    types.User user = 1;
}
